--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="container">
+  <app-data-table-object></app-data-table-object>
+</div>
+
+<br />
+
+<div class="container">
   <app-data-table></app-data-table>
 </div>
